; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_select.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socket_select(i64 %0, i32* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.timeval, align 4
  %13 = alloca double, align 8
  store i64 %0, i64* %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %14 = load i32, i32* %11, align 4
  %15 = call double @timeout_get(i32 %14)
  store double %15, double* %13, align 8
  %16 = load double, double* %13, align 8
  %17 = fptosi double %16 to i32
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %12, i32 0, i32 0
  store i32 %17, i32* %18, align 4
  %19 = load double, double* %13, align 8
  %20 = getelementptr inbounds %struct.timeval, %struct.timeval* %12, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = sitofp i32 %21 to double
  %23 = fsub double %19, %22
  %24 = fmul double %23, 1.000000e+06
  %25 = fptosi double %24 to i32
  %26 = getelementptr inbounds %struct.timeval, %struct.timeval* %12, i32 0, i32 1
  store i32 %25, i32* %26, align 4
  %27 = load i64, i64* %7, align 8
  %28 = icmp sle i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %5
  %30 = load double, double* %13, align 8
  %31 = fmul double 1.000000e+03, %30
  %32 = fptosi double %31 to i32
  %33 = call i32 @Sleep(i32 %32)
  store i32 0, i32* %6, align 4
  br label %45

34:                                               ; preds = %5
  %35 = load i32*, i32** %8, align 8
  %36 = load i32*, i32** %9, align 8
  %37 = load i32*, i32** %10, align 8
  %38 = load double, double* %13, align 8
  %39 = fcmp oge double %38, 0.000000e+00
  br i1 %39, label %40, label %41

40:                                               ; preds = %34
  br label %42

41:                                               ; preds = %34
  br label %42

42:                                               ; preds = %41, %40
  %43 = phi %struct.timeval* [ %12, %40 ], [ null, %41 ]
  %44 = call i32 @select(i32 0, i32* %35, i32* %36, i32* %37, %struct.timeval* %43)
  store i32 %44, i32* %6, align 4
  br label %45

45:                                               ; preds = %42, %29
  %46 = load i32, i32* %6, align 4
  ret i32 %46
}

declare dso_local double @timeout_get(i32) #1

declare dso_local i32 @Sleep(i32) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
